--- a/Practicas en Frontendmentor/product-preview-card-component-main/index.html
+++ b/Practicas en Frontendmentor/product-preview-card-component-main/index.html
@@ -15,6 +15,9 @@
  
 </head>
 <body>
+  <div class="btn-back">
+    <a href="/index.html"><img src="/Icons/arrow-back-outline.svg" alt="" class="link-back" ></a>
+  </div>
   <article class="card">
     <img src="/product-preview-card-component-main/images/image-product-desktop.jpg" alt="Parfun" class="card_img">
     <img src="/product-preview-card-component-main/images/image-product-mobile.jpg" alt="Parfum" class="card_img_mobile">
@@ -37,10 +40,12 @@
     
     
   </article>
+  <!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/javierr66">javierr66</a>.
   </div>
-
+  -->
 </body>
 </html>
+
